--- a/index.html
+++ b/index.html
@@ -1,53 +1,155 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>GAWOO-TECH</title>
-    <link rel="stylesheet" href=style.css"
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>GAWOO TECH</title>
+    <LINK REL="stylesheet" href="style.css"
 </head>
+<body>
+    <header class="header">
+        <div class="logo-header">
+            <img src="CodeWithGawoo.png"
+        </div>
+        <nav class="nav-menu">
+            <ul>
+                <li><a href="#">home</a> </li>
+                <li><a href="#">about</a> </li>
+                <Li><a href="#"> services</a></Li>
+                <li><a href="#">contact</a></li>
 
+            </ul>
 
+        </nav>
 
+    </header>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</body>
 </html>
+
+
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
