--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>GAWOO TECH</title>
-    <LINK REL="stylesheet" href="style.css"
+    <LINK REL="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
         <div class="logo-header">
-            <img src="CodeWithGawoo.png"
+            <img src="CodeWithGawoo.png">
         </div>
         <nav class="nav-menu">
             <ul>
