Home section and Header

--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
         </nav>
 
     </header>
+    <section class="home-section">
+    <div class="home-content">
+        <h1>Welcome to GAWOO TECH</h1>
+        <p>Hello, we are Gawoo Tech. Welcome to our site and thanks for visiting!</p>
+        <div class="home-buttons">
+            <a href="#services" class="btn btn-primary">Our Services</a>
+            <a href="#contact" class="btn btn-secondary">Contact Us</a>
+        </div>
+    </div>
+    <div class="home image">
+        <img src="CodeWithGawoo.png"alt="Gawoo tech"
+    </div>
+</section>
 
 </body>
 </html>
@@ -152,4 +165,4 @@
 
 
 
-</body>
+
